k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pose-estimator
  namespace: assignment1
  labels:
    app: pose-estimator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pose-estimator
  template:
    metadata:
      labels:
        app: pose-estimator
    spec:
      containers:
        - name: pose-container
          image: imhero2k/pose-estimation
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: 512Mi
            limits:
              cpu: "500m"
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
