k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pose-estimator-service
  namespace: assignment1
  labels:
    app: pose-estimator
spec:
  type: NodePort
  selector:
    app: pose-estimator
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
